--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kristen's space.</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&display=swap');
     </style>
-    <script src="https://gusbus.space/smallweb-subway.js/creativesclub.js"></script>
+    <!-- <script src="https://gusbus.space/smallweb-subway.js/creativesclub.js"></script> -->
     <script src="main.js"></script>
 </head>
 
@@ -20,17 +22,17 @@
                     href="https://app.acuityscheduling.com/schedule/fb85a23f/?appointmentTypeIds[]=67561130"
                     target="_blank">WII NIGHT</a>!</marquee>
         </div> -->
-        <div id="headerArea">
+        <!-- <div id="headerArea">
 
             <nav id="navbar" style="margin-bottom: 10px;">
                 <ul id="navList">
                     <li><a href="#">home</a></li>
                     <li><a href="/selected-works.html">selected works</a></li>
-                    <!-- <li><a href="/digital-games.html">video games & virtual worlds</a></li>
+                    <li><a href="/digital-games.html">video games & virtual worlds</a></li>
                     <li><a href="/computational-art.html">computational art</a></li>
                     <li><a href="/exhibits.html">museum exhibit design</a></li>
                     <li><a href="/teaching.html">pedagogical conceptualizations</a></li>
-                    <li><a href="/toys.html">tabletop games & toys</a></li> -->
+                    <li><a href="/toys.html">tabletop games & toys</a></li>
                     <li class="dropdown">
                         <a href="#">publications</a>
                         <ul class="dropdown-menu">
@@ -51,11 +53,18 @@
                 </ul>
                 <button class="hamburger" onclick="toggleMenu()">🍔</button>
             </nav>
-        </div>
+        </div> -->
 
         <div id="flex">
             <aside id="leftSidebar" style="margin-right: 10px;">
-                <h2>blog</h2>
+                <h1>kristen marcinek</h1>
+                <p>game developer | creative technologist | artist</p>
+                <a id="navLink" href="#/">work</a></li>
+                <a id="navLink" href="/about.html">about</a>
+                <a id="navLink" href="/teaching.html">teaching</a>
+                <a id="navLink" href="/writing.html">writing</a>
+
+                <!-- <h2>blog</h2>
                 <div class="box">
                     <p><time>2024-08-05</time> <a href="/content/blog/potpourri-3.html">potpourri no.3</a></p>
                     <p><time>2024-07-25</time> <a href="/content/blog/potpourri-2.html">potpourri no.2</a></p>
@@ -63,10 +72,10 @@
                     <p><time>2024-07-10</time> <a href="/content/blog/dialectics.html">dialectics</a></p>
                     <p><time>2024-07-09</time> <a href="/content/blog/recent-press.html">recent press (+ a
                             fundraiser!)</a></p>
-                </div>
+                </div> -->
                 <br>
-                <a href="https://marcinek.tech" target="_blank">
-                    <img src="/images/marcinek88x31.png" border="0" alt="marcinek.tech" width="88" height="31"></a>
+                <!-- <a href="https://marcinek.tech" target="_blank">
+                    <img src="/images/marcinek88x31.png" border="0" alt="marcinek.tech" width="88" height="31"></a> -->
                 <h2>credits</h2>
                 <ul>
                     <li>font is <a href="https://www.oliviaking.com/inclusive-sans" target="_blank">inclusive sans by
@@ -75,12 +84,12 @@
                             target="_blank">sadgrl's layout builder</a></li>
                     <li>color palette modified from <a href="https://everblush.github.io/" target="_blank">everblush</a>
                     </li>
-                    <li>comments powered by <a href="https://giscus.app/" target="_blank">giscus</a></li>
-                    <li>blog written in <a href="https://blog.miso.town/" target="_blank">html blog</a> format</li>
+                    <!-- <li>comments powered by <a href="https://giscus.app/" target="_blank">giscus</a></li>
+                    <li>blog written in <a href="https://blog.miso.town/" target="_blank">html blog</a> format</li> -->
                     <li>cards powered by <a href="https://getbootstrap.com/" target="_blank">bootstrap</a></li>
                     <li>hosted on <a href="https://pages.github.com/" target="_blank">github pages</a></li>
                 </ul>
-                
+
                 <!-- <img src="/images/a12.gif" alt="" style="display: block; margin: auto;">
                 <img src="/images/doom-blinkie.gif" alt="" style="display: block; margin: auto;">
                 <img src="/images/shadow-blinkie.gif" alt="" style="display: block; margin: auto;">
@@ -96,7 +105,138 @@
                 <img src="/images/cats-blinkie.gif" alt="" style="display: block; margin: auto;"> -->
             </aside>
             <main>
-                <h1>welcome to the space of kristen marcinek.</h1>
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">fleshwalk: an experience (current)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">mystic marsh pets (current)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">souls in symbiosis (2024)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">the deepfake files (2024)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">feed me trash, man! (2024)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">meditative mosaics (2023)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">climate action heroes monthly missions (2023)</h5>
+                                <p class="card-text"> </p>
+                                <a href="/content/games/trashcan-john.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/psyche_quest.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">psyche quest (2023)</h5>
+                                <p class="card-text"><i>psyche quest</i> is a 2d platformer that takes players on an
+                                    emotional
+                                    journey
+                                    through the mind of someone with borderline personality disorder (bpd).</p>
+                                <a href="/content/games/psyche-quest.html"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="https://marcinexus.itch.io/psyche-quest"
+                                    class="btn btn-outline-secondary text-light">play</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">dvd shot (2022)</h5>
+                                <p class="card-text"> </p>
+                                <a href="#" class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="/content/games/space-shmup/index.html"
+                                    class="btn btn-outline-secondary text-light">play</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">space shmup (2022)</h5>
+                                <p class="card-text"> </p>
+                                <a href="#" class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="/content/games/space-shmup/index.html"
+                                    class="btn btn-outline-secondary text-light">play</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">client work (ongoing)</h5>
+                                <p class="card-text"> </p>
+                                <a href="#" class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="/content/games/space-shmup/index.html"
+                                    class="btn btn-outline-secondary text-light">play</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <h1>welcome to the space of kristen marcinek.</h1>
                 <h3>i make things. ↯</h3>
                 <div class="square">
                     <img src="/images/me.JPG" alt="photo of me playing with electronics" width="45%" height="auto"
@@ -167,9 +307,9 @@
                         eccentric thoughts on games, technology, social
                         informatics, visual art, philosophy, and even outer space sometimes.
                     </p>
-                </div>
+                </div> -->
 
-                <div style="text-align: center;">
+                <!-- <div style="text-align: center;">
                     [&nbsp;&nbsp;&nbsp;&nbsp;<a
                         href="https://www.rainbowcemetery.com/devring">GAMEDEV&nbsp;&nbsp;&nbsp;WEBRING</a>&nbsp;&nbsp;&nbsp;&nbsp;]<br>[<a
                         href="https://www.rainbowcemetery.com/devring/prev.php?id=0">&lt;PREV</a> <a
@@ -177,12 +317,12 @@
                         href="https://www.rainbowcemetery.com/devring/list.php?id=0">LIST</a> <a
                         href="https://www.rainbowcemetery.com/devring/next.php?id=0">NEXT&gt;</a>]
                 </div>
-                <smallweb-subway-creativesclub></smallweb-subway-creativesclub>
+                <smallweb-subway-creativesclub></smallweb-subway-creativesclub> -->
         </div>
         </main>
 
     </div>
-    <footer id="footer" style="margin-top: 10px;">
+    <!-- <footer id="footer" style="margin-top: 10px;">
         
         <p><i>while i am proud of, grateful for, and identify with my employment history, all thoughts and opinions
                 expressed are my own. they are <b>not</b> representative of the wilson center, national children's
@@ -198,7 +338,7 @@
                     src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img
                     style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
                     src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a></p>
-    </footer>
+    </footer> -->
     </div>
 </body>
 
