adding teaching and writing
woah i've done stuff

--- a/teaching.html
+++ b/teaching.html
@@ -14,76 +14,29 @@
 
 <body>
     <div id="container">
-        <div id="headerArea">
-
-            <nav id="navbar" style="margin-bottom: 10px;">
-                <ul id="navList">
-                    <li><a href="/index.html">home</a></li>
-                    <li><a href="/digital-games.html">video games & virtual worlds</a></li>
-                    <li><a href="/computational-art.html">computational art</a></li>
-                    <li><a href="/exhibits.html">museum exhibit design</a></li>
-                    <li><a href="#">pedagogical conceptualizations</a></li>
-                    <li><a href="/toys.html">tabletop games & toys</a></li>
-                    <li class="dropdown">
-                        <a href="#">publications</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape" target="_blank">empowering participation in science</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="https://www.linkedin.com/in/kristen-marcinek" target="_blank">linkedin</a></li>
-                    <li><a href="https://marcinexus.itch.io/" target="_blank">itch.io</a></li>
-                    <li><a href="https://github.com/kristenmarcinek" target="_blank">github</a></li>
-                    <li><a href="/blog.html">blog</a></li>
-                    <li><a href="/cv.html">cv</a></li>
-                    <li><a href="/contact.html">contact</a></li>
-                </ul>
-                <button class="hamburger" onclick="toggleMenu()">🍔</button>
-            </nav>
-        </div>
-
         <div id="flex">
+            <aside id="leftSidebar" style="margin-right: 10px;">
+                <h1>kristen marcinek</h1>
+                <p>game developer | creative technologist | artist</p>
+                <a id="navLink" href="/index.html">work</a></li>
+                <a id="navLink" href="/about.html">about</a>
+                <a id="navLink" href="#">teaching</a>
+                <a id="navLink" href="/writing.html">writing</a>
+            </aside>
+
             <main>
-                <h1>pedagogical conceptualizations.</h1>
-                <h3>i make things. ↯</h3>
-                <img src="/images/construction.gif" alt="" style="display: block; margin: auto;">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <!-- <div class="col">
-                        <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">games are for everybody (2024)</h5>
-                                <p class="card-text">psyche quest is a 2d platformer that takes players on an emotional
-                                    journey
-                                    through the mind of someone with borderline personality disorder (bpd).</p>
-                                <a href="/teaching/maker-talk.html" class="btn btn-outline-secondary text-light">explore</a>
-                            </div>
-                        </div>
-                    </div> -->
-                    <div class="col">
-                        <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">plastic pipeline curriculum alignment (2024)</h5>
-                                <p class="card-text"> </p>
-                                <a href="https://plasticpipeline.wilsoncenter.org/educational-resources-plastic-pollution" class="btn btn-outline-secondary text-light" target="_blank">explore</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="..." class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">code hopper (2020)</h5>
-                                <p class="card-text"> </p>
-                                <a href="/teaching/code-hopper.html" class="btn btn-outline-secondary text-light">explore</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h1>teaching</h1>
+               <h3>the plastic pipeline curriculum alignment</h3>
+               <h3><a href="https://www.eventbrite.com/e/how-to-design-a-game-taught-by-kristen-marcinek-tickets-999745755467">how to design a game</a></h3>
+               <p>workshop introducing youth to game design concepts and practices in construct 3. anacostia youth media festival 2024.</p>
+               <h3><a href="https://ccfest.rocks/virtual-july21-2024">using game design principles to level up computational art</a></h3>
+               <p>lecture exploring how ludology can be applied to p5.js to foster interactivity in computational art. virtual creative coding fest 2024.</p>
+               <h3><a href="https://www.youtube.com/watch?v=TyOr8hHK3Hk">maker talk: games are for everybody</a></h3>
+               <p>presentation breaking down the basics of video game creation and providing resources for those just starting out in game design. martin luther king jr. memorial library 2024.</p>
             </main>
 
         </div>
-        <footer id="footer" style="margin-top: 10px;">
+        <!-- <footer id="footer" style="margin-top: 10px;">
             <img src="/images/antinft.gif" alt="">
             <img src="/images/anybrow.gif" alt="">
             <img src="/images/queercoded.png" alt="">
@@ -101,7 +54,7 @@
                         src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""><img
                         style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
                         src="https://mirrors.creativecommons.org/presskit/icons/sa.svg?ref=chooser-v1" alt=""></a></p>
-        </footer>
+        </footer> -->
     </div>
 </body>
 
