fleshing out projects

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <img src="/images/meditate-mosaics.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">meditative mosaics (2023)</h5>
                                 <p class="card-text"> </p>
@@ -173,7 +173,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <img src="/images/climate-action-heroes.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">climate action heroes monthly missions (2023)</h5>
                                 <p class="card-text"> </p>
@@ -200,13 +200,11 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
+                            <img src="/images/dvd-sc.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">dvd shot (2022)</h5>
                                 <p class="card-text"> </p>
-                                <a href="#" class="btn btn-outline-secondary text-light">explore</a>
-                                <a href="/content/games/space-shmup/index.html"
-                                    class="btn btn-outline-secondary text-light">play</a>
+                                <a href="https://openprocessing.org/sketch/1670775" class="btn btn-outline-secondary text-light">explore</a>
                             </div>
                         </div>
                     </div>
