--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <img src="/images/witch-frog-render-1440.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">mystic marsh pets (current)</h5>
                                 <p class="card-text"> </p>
@@ -129,23 +129,33 @@
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <video src="/content/artworks/souls_in_symbiosis.mp4" autoplay loop
+                                class="card-img-top"></video>
                             <div class="card-body">
                                 <h5 class="card-title">souls in symbiosis (2024)</h5>
-                                <p class="card-text"> </p>
-                                <a href="/content/games/trashcan-john.html"
+                                <p class="card-text">an art piece created in p5.js that
+                                    uses a brownian tree algorithm to simulate
+                                    lichen growth. <i>souls in symbiosis</i> (physical) was on view in the steam engine
+                                    exhibition at rhizome dc in december 2024. </p>
+                                <a href="/content/artworks/souls-in-symbiosis/index.html"
                                     class="btn btn-outline-secondary text-light">explore</a>
                             </div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="card h-100 text-center bg-transparent text-light">
-                            <img src="/images/trashcan-john.jpg" class="card-img-top" alt="...">
+                            <img src="/images/deepfake-files.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">the deepfake files (2024)</h5>
-                                <p class="card-text"> </p>
-                                <a href="/content/games/trashcan-john.html"
+                                <p class="card-text"><i>the deepfake files</i> is an interactive that aims to dispel common misconceptions and educate
+                                    staffers on the strengths and weaknesses of various
+                                    deepfake mitigation strategies to inform generative ai policy. contributions during my internship at the wilson center include gameplay design and preliminary research.</p>
+                                <a href="https://www.fablevisionstudios.com/portfolio/interactive-the-deepfake-files"
                                     class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="https://www.wilsoncenter.org/deepfake-files-about"
+                                    class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="https://www.wilsoncenter.org/game/deepfakefiles"
+                                    class="btn btn-outline-secondary text-light">play</a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +186,9 @@
                             <img src="/images/climate-action-heroes.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">climate action heroes monthly missions (2023)</h5>
-                                <p class="card-text"> </p>
+                                <p class="card-text">monthly missions created for the at-home portion of the climate
+                                    action heroes exhibit. created during my internship at the nationa children's
+                                    museum.</p>
                                 <a href="/content/games/trashcan-john.html"
                                     class="btn btn-outline-secondary text-light">explore</a>
                             </div>
@@ -204,7 +216,8 @@
                             <div class="card-body">
                                 <h5 class="card-title">dvd shot (2022)</h5>
                                 <p class="card-text"> </p>
-                                <a href="https://openprocessing.org/sketch/1670775" class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="https://openprocessing.org/sketch/1670775"
+                                    class="btn btn-outline-secondary text-light">explore</a>
                             </div>
                         </div>
                     </div>
@@ -224,7 +237,7 @@
                         <div class="card h-100 text-center bg-transparent text-light">
                             <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">client work (ongoing)</h5>
+                                <h5 class="card-title">client & community work (ongoing)</h5>
                                 <p class="card-text"> </p>
                                 <a href="#" class="btn btn-outline-secondary text-light">explore</a>
                                 <a href="/content/games/space-shmup/index.html"
