--- a/teaching.html
+++ b/teaching.html
@@ -27,12 +27,14 @@
             <main>
                 <h1>teaching</h1>
                <h3>the plastic pipeline curriculum alignment</h3>
+               <h3>school of communication: masters in game design student led webinar</h3>
+               <p>invited to lead a webinar on the graduate games programs at american university. virtual, 2025.</p>
                <h3><a href="https://www.eventbrite.com/e/how-to-design-a-game-taught-by-kristen-marcinek-tickets-999745755467">how to design a game</a></h3>
-               <p>workshop introducing youth to game design concepts and practices in construct 3. anacostia youth media festival 2024.</p>
+               <p>workshop introducing youth to game design concepts and practices in construct 3. anacostia youth media festival, 2024.</p>
                <h3><a href="https://ccfest.rocks/virtual-july21-2024">using game design principles to level up computational art</a></h3>
-               <p>lecture exploring how ludology can be applied to p5.js to foster interactivity in computational art. virtual creative coding fest 2024.</p>
+               <p>lecture exploring how ludology can be applied to p5.js to foster interactivity in computational art. virtual creative coding fest, 2024.</p>
                <h3><a href="https://www.youtube.com/watch?v=TyOr8hHK3Hk">maker talk: games are for everybody</a></h3>
-               <p>presentation breaking down the basics of video game creation and providing resources for those just starting out in game design. martin luther king jr. memorial library 2024.</p>
+               <p>presentation breaking down the basics of video game creation and providing resources for those just starting out in game design. martin luther king jr. memorial library, 2024.</p>
             </main>
 
         </div>
