add more content

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
                             <div class="card-body">
                                 <h5 class="card-title">fleshwalk: an experience (current)</h5>
                                 <p class="card-text"> </p>
-                                <a href="/content/games/trashcan-john.html"
+                                <a href="https://fleshwalk.lichenlabs.xyz/"
                                     class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="https://fleshwalk.lichenlabs.xyz/"
+                                    class="btn btn-outline-secondary text-light">play</a>
                             </div>
                         </div>
                     </div>
@@ -237,7 +239,19 @@
                         <div class="card h-100 text-center bg-transparent text-light">
                             <img src="/images/shmup-sc.png" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">client & community work (ongoing)</h5>
+                                <h5 class="card-title">client & community work</h5>
+                                <p class="card-text"> </p>
+                                <a href="#" class="btn btn-outline-secondary text-light">explore</a>
+                                <a href="/content/games/space-shmup/index.html"
+                                    class="btn btn-outline-secondary text-light">play</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card h-100 text-center bg-transparent text-light">
+                            <img src="/images/all-renders.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">classwork</h5>
                                 <p class="card-text"> </p>
                                 <a href="#" class="btn btn-outline-secondary text-light">explore</a>
                                 <a href="/content/games/space-shmup/index.html"
