--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">climate action heroes monthly missions (2023)</h5>
                                 <p class="card-text">monthly missions created for the at-home portion of the climate
-                                    action heroes exhibit. created during my internship at the national children's
+                                    action heroes exhibit. written during my internship at the national children's
                                     museum.</p>
                                 <a href="/content/games/trashcan-john.html"
                                     class="btn btn-outline-secondary text-light">explore</a>
