--- a/index.html
+++ b/index.html
@@ -154,11 +154,22 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="project-card">
-                    <img src="media/shmup-sc.png" alt="Project">
+                    <img src="media/hga1.png" alt="Project">
                     <div class="project-info">
                         <h5>Client Work</h5>
                         <p>Graphic & Web Design</p>
                         <a href="client-work.html" class="btn btn-sm btn-primary">Explore</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-lg-4">
+                <div class="project-card">
+                    <img src="media/shmup-sc.png" alt="Project">
+                    <div class="project-info">
+                        <h5>Live Visuals</h5>
+                        <p>Performances & Projections</p>
+                        <a href="live-visuals.html" class="btn btn-sm btn-primary">Explore</a>
                     </div>
                 </div>
             </div>
