--- a/monthly-missions.html
+++ b/monthly-missions.html
@@ -29,18 +29,106 @@
         <br>
 
         <h2>Examples authored by myself</h2>
-        <div class="row g-3">
-            <div class="col-md-4">
-                <a href="assets/images/shot1.png" class="glightbox">
-                    <img src="assets/images/shot1.png" class="img-fluid rounded">
-                </a>
+        <div class="container">
+            <div class="row align-items-center g-3 mb-4">
+                <div class="col-12 col-md-2">
+                    <a href="media/community_captain.webp" class="glightbox">
+                        <img src="media/community_captain.webp" class="img-fluid rounded">
+                    </a>
+                </div>
+                <div class="col-12 col-md-10">
+                    <h5>Community Captain</h5>
+                    <p>
+                        <i>Walking is good exercise, can help reduce waste and carbon emissions, and also connects us
+                            with science and nature. With friends or family members, <a
+                                href="https://www.youtube.com/watch?v=OT3X8gkzj4E">lead a five senses nature walk
+                                outside</a>. See what you can find!</i>
+                    </p>
+                </div>
             </div>
-            <div class="col-md-4">
-                <a href="assets/images/shot2.png" class="glightbox">
-                    <img src="assets/images/shot2.png" class="img-fluid rounded">
-                </a>
+
+            <div class="row align-items-center g-3 mb-4">
+                <div class="col-12 col-md-2">
+                    <a href="media/pollinator_patrol.webp" class="glightbox">
+                        <img src="media/pollinator_patrol.webp" class="img-fluid rounded">
+                    </a>
+                </div>
+                <div class="col-12 col-md-10">
+                    <h5>Pollinator Patrol</h5>
+                    <p>
+                        <i>When fall comes around, bees are a buzzy as ever looking for food for the winter! One aspect
+                            of
+                            nature that helps bees digest their food is ample amounts of water. For this month, see if
+                            <a href="https://kids.nationalgeographic.com/books/article/make-a-birdbath">you
+                                can create or install a bird
+                                bath</a> in your garden or on
+                            your windowsill that gives bees this precious resource!</i>
+                    </p>
+                </div>
             </div>
+
+            <div class="row align-items-center g-3 mb-4">
+                <div class="col-12 col-md-2">
+                    <a href="media/arbor_avenger.webp" class="glightbox">
+                        <img src="media/arbor_avenger.webp" class="img-fluid rounded">
+                    </a>
+                </div>
+                <div class="col-12 col-md-10">
+                    <h5>Arbor Avenger</h5>
+                    <p>
+                        <i>When fall comes around, the colors of leaves start to change! This is because of less
+                            sunlight.
+                            For every color of leaf you see, can you collect one fallen leaf? With the leaves you
+                            collected,
+                            we challenge you to make leaf rubbings! You can learn more about leaf rubbings <a
+                                href="https://www.pbs.org/parents/crafts-and-experiments/make-leaf-and-bark-rubbings">here</a>.</i>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row align-items-center g-3 mb-4">
+                <div class="col-12 col-md-2">
+                    <a href="media/water_warrior.webp" class="glightbox">
+                        <img src="media/water_warrior.webp" class="img-fluid rounded">
+                    </a>
+                </div>
+                <div class="col-12 col-md-10">
+                    <h5>Water Warrior</h5>
+                    <p>
+                        <i>Water is a resource that is all around us. One of the bonding features of living beings is
+                            their
+                            need for water! Did you know that NASA researchers believe that for us to find life in
+                            space, we
+                            must first search for water? What do you think are some signs that water is near? Learn more
+                            about the signs of life <a
+                                href="https://www.nhm.ac.uk/discover/eight-ingredients-life-in-space.html">here</a> and
+                            <a
+                                href="https://sitn.hms.harvard.edu/flash/2019/water-beyond-earth-the-search-for-the-life-sustaining-liquid/">here</a>.</i>
+                    </p>
+                </div>
+            </div>
+
+            <div class="row align-items-center g-3 mb-4">
+                <div class="col-12 col-md-2">
+                    <a href="media/mighty_meteorologist.webp" class="glightbox">
+                        <img src="media/mighty_meteorologist.webp" class="img-fluid rounded">
+                    </a>
+                </div>
+                <div class="col-12 col-md-10">
+                    <h5>Mighty Meteorologist</h5>
+                    <p>
+                        <i>Did you know the reason our sky is blue is because the white light from the sun gets refracted
+                        in the atmosphere, making the blue light shine brightest? The sky isn't always blue, though.
+                        There are many other colors the sky can be! For this month, we want you to go out at the same
+                        time everyday and observe the sky's color as well as the weather for that day. At the end of
+                        month, compare all the colors that the sky was, and observe what differences the weather made in
+                        the sky's color!</i>
+                    </p>
+                </div>
+            </div>
+
         </div>
+
         <br>
 
         <br>
