--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
             <div class="col-md-6 col-lg-4">
                 <div class="project-card">
-                    <img src="media/shmup-sc.png" alt="Project">
+                    <img src="media/XenonLichen4.jpg" alt="Project">
                     <div class="project-info">
                         <h5>Live Visuals</h5>
                         <p>Performances & Projections</p>
