--- a/live-visuals.html
+++ b/live-visuals.html
@@ -40,7 +40,12 @@
 
         <h2>Night of the Livecoding Dead @ Rhizome DC</h2>
         <p>November 2024</p>
-        <div class="row g-3">
+
+        <div class="ratio ratio-16x9 my-4">
+            <iframe src="https://www.youtube.com/embed/x0mnDwUuEV4?si=AmeaOKNY5G_N4iMq" allowfullscreen></iframe>
+        </div>
+
+        <!-- <div class="row g-3">
             <div class="col-md-4">
                 <a href="assets/images/shot1.png" class="glightbox">
                     <img src="assets/images/shot1.png" class="img-fluid rounded">
@@ -51,7 +56,7 @@
                     <img src="assets/images/shot2.png" class="img-fluid rounded">
                 </a>
             </div>
-        </div>
+        </div> -->
 
     </main>
 
