--- a/monthly-missions.html
+++ b/monthly-missions.html
@@ -134,7 +134,7 @@
         <br>
         <h2>What is <a href="https://nationalchildrensmuseum.org/explore/exhibits/climate-action-heroes">Climate Action
                 Heroes</a>?</h2>
-        <p>Climate Action Heroes is an exhibit created by the National Children's Museu featuring superhero identities
+        <p>Climate Action Heroes is an exhibit created by the National Children's Museum featuring superhero identities
             that patrons can embody.
             There are 5 superheroes that kids can be: Community Captain, Pollinator Patrol, Arbor Avenger, Water
             Warrior, and Mighty Meteorologist.</p>
