--- a/psyche-quest.html
+++ b/psyche-quest.html
@@ -102,6 +102,12 @@
                 bloodstreams. Players must swim through the stress before time runs out.</li>
         </ol>
 
+        <h2>Further Exploration</h2>
+        <p>While I am happy with the minimum viable product presented here, there are changes and additions that can be
+            further explored in the future. Namely, ensuring that the approach is not stigmatizing in and of itself and
+            is both empathetic towards and grounded in the reality of those with BPD and those who love someone with
+            BPD. Likewise, the narrative and puzzles are to be teased out further.</p>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
