--- a/deepfake-files.html
+++ b/deepfake-files.html
@@ -49,8 +49,8 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a href="assets/images/shot2.png" class="glightbox">
-                    <img src="assets/images/shot2.png" class="img-fluid rounded">
+                <a href="media/kit-kat.jpg" class="glightbox">
+                    <img src="media/kit-kat.jpg" class="img-fluid rounded">
                 </a>
             </div>
         </div>
