--- a/teaching.html
+++ b/teaching.html
@@ -26,6 +26,8 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="writing.html">Writing</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek" target="_blank">GitHub</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/" target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
