--- a/writing.html
+++ b/writing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +27,10 @@
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Writing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek" target="_blank">GitHub</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/" target="_blank">LinkedIn</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek"
+                            target="_blank">GitHub</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/"
+                            target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
@@ -46,23 +49,32 @@
             <article class="writing-item">
                 <h3>Innovating How We Innovate: The Triple Helix of University-Industry-Government Relations</h3>
                 <p>October 2024</p>
-                <a href="https://www.wilsoncenter.org/article/innovating-how-we-innovate-triple-helix-university-industry-government-relations">Read more →</a>
+                <p>By Bolu Adesanmi, Kristen Marcinek, and Elizabeth M H Newbury</p>
+                <a
+                    href="https://www.wilsoncenter.org/article/innovating-how-we-innovate-triple-helix-university-industry-government-relations" target="_blank">Read
+                    more →</a>
             </article>
             <article class="writing-item">
                 <h3>The Plastic Pipeline Wins Big at Serious Game Festivals</h3>
                 <p>August 2024</p>
-                <a href="https://www.wilsoncenter.org/blog-post/plastic-pipeline-wins-big-serious-game-festivals">Read more →</a>
+                <p>By Kristen Marcinek, Sonja R. O’Brien, Elizabeth M H Newbury, and John Matuszewski</p>
+                <a href="https://www.wilsoncenter.org/blog-post/plastic-pipeline-wins-big-serious-game-festivals" target="_blank">Read
+                    more →</a>
             </article>
 
             <article class="writing-item">
                 <h3>Games Round Up: International Trade</h3>
                 <p>July 2024</p>
-                <a href="https://www.wilsoncenter.org/blog-post/games-round-international-trade">Read more →</a>
+                <p>By Kristen Marcinek and Elizabeth M H Newbury</p>
+                <a href="https://www.wilsoncenter.org/blog-post/games-round-international-trade" target="_blank">Read more →</a>
             </article>
             <article class="writing-item">
                 <h3>Empowering Participation in Science: A Citizen Science Landscape</h3>
                 <p>June 2024</p>
-                <a href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape">Read more →</a>
+                <p>By Kristen Marcinek and Joyce Chen</p>
+                <a
+                    href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape" target="_blank">Read
+                    more →</a>
             </article>
         </div>
     </main>
