--- a/writing.html
+++ b/writing.html
@@ -48,30 +48,31 @@
             </article>
             <article class="writing-item">
                 <h3>Innovating How We Innovate: The Triple Helix of University-Industry-Government Relations</h3>
-                <p>October 2024</p>
-                <p>By Bolu Adesanmi, Kristen Marcinek, and Elizabeth M H Newbury</p>
+                <p>October 2024<br>
+                    By Bolu Adesanmi, Kristen Marcinek, and Elizabeth M H Newbury
+                </p>
                 <a
                     href="https://www.wilsoncenter.org/article/innovating-how-we-innovate-triple-helix-university-industry-government-relations" target="_blank">Read
                     more →</a>
             </article>
             <article class="writing-item">
                 <h3>The Plastic Pipeline Wins Big at Serious Game Festivals</h3>
-                <p>August 2024</p>
-                <p>By Kristen Marcinek, Sonja R. O’Brien, Elizabeth M H Newbury, and John Matuszewski</p>
+                <p>August 2024<br>
+                    By Kristen Marcinek, Sonja R. O’Brien, Elizabeth M H Newbury, and John Matuszewski</p>
                 <a href="https://www.wilsoncenter.org/blog-post/plastic-pipeline-wins-big-serious-game-festivals" target="_blank">Read
                     more →</a>
             </article>
 
             <article class="writing-item">
                 <h3>Games Round Up: International Trade</h3>
-                <p>July 2024</p>
-                <p>By Kristen Marcinek and Elizabeth M H Newbury</p>
+                <p>July 2024<br>
+                    By Kristen Marcinek and Elizabeth M H Newbury</p>
                 <a href="https://www.wilsoncenter.org/blog-post/games-round-international-trade" target="_blank">Read more →</a>
             </article>
             <article class="writing-item">
                 <h3>Empowering Participation in Science: A Citizen Science Landscape</h3>
-                <p>June 2024</p>
-                <p>By Kristen Marcinek and Joyce Chen</p>
+                <p>June 2024<br>
+                    By Kristen Marcinek and Joyce Chen</p>
                 <a
                     href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape" target="_blank">Read
                     more →</a>
