fix mobile nav menu

--- a/about.html
+++ b/about.html
@@ -20,17 +20,23 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">Kristen's Space.</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <a class="navbar-brand" href="index.html">Kristen's Space.</a>
+
+            <button class="hamburger" id="hamburger">🍔</button>
+
+            <div class="navbar-menu" id="navbarMenu">
+                <ul class="navbar-nav ms-auto" id="navList">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="writing.html">Writing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek" target="_blank">GitHub</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/" target="_blank">LinkedIn</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek"
+                            target="_blank">GitHub</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/"
+                            target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
+
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
         </div>
     </nav>
@@ -56,7 +62,8 @@
                     to
                     prioritize one over the other; they can work synergistically. I am passionate about providing
                     non-traditional educational experiences and
-                    accurately representing intersectional and marginalized lenses while balancing the abstract, the creative, and
+                    accurately representing intersectional and marginalized lenses while balancing the abstract, the
+                    creative, and
                     the immersive.
                 </p>
                 <p>I am currently a student at American University working towards my MFA in Games and
@@ -67,7 +74,8 @@
                     with The Wilson Center in Washington, DC in their Serious Games Initiative. Prior to the Wilson
                     Center, I interned with the National Children’s Museum as an Exhibits Intern. I received
                     my
-                    BA in Information Technology and Informatics from Rutgers University – New Brunswick in 2022, where I
+                    BA in Information Technology and Informatics from Rutgers University – New Brunswick in 2022, where
+                    I
                     also
                     minored in Social Justice. During my time at Rutgers, I was the President of Reproductive
                     Health
@@ -81,15 +89,18 @@
 
                 <ul>
                     <li><strong>Skills:</strong> Visual design, programming, prototyping</li>
-                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, a fountain pen and dot grid notebook</li>
+                    <li><strong>Tools:</strong> Unity, Maya, Adobe Creative Cloud, Procreate, a fountain pen and dot
+                        grid notebook</li>
                     <li><strong>Interests:</strong> Narrative design, game design, worldbuilding, procedural rhetoric
                     </li>
                     <li><strong>Research Areas:</strong> Accessibility in games, games as art, stigmatized
                         representation in games, transformational game design, monstrous-feminine in games</li>
                 </ul>
-                <p><i>While I am proud of, grateful for, and identify with my employment history, all thoughts and opinions
-                expressed are my own. They are <b>not</b> representative of Anacostia Youth Media, Highland Global Advisors, The Wilson Center, National Children's
-                Museum, American University, or Rutgers University.</i></p>
+                <p><i>While I am proud of, grateful for, and identify with my employment history, all thoughts and
+                        opinions
+                        expressed are my own. They are <b>not</b> representative of Anacostia Youth Media, Highland
+                        Global Advisors, The Wilson Center, National Children's
+                        Museum, American University, or Rutgers University.</i></p>
             </div>
         </div>
     </main>
