--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,16 +21,22 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Kristen's Space.</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+            <button class="hamburger" id="hamburger">🍔</button>
+
+            <div class="navbar-menu" id="navbarMenu">
+                <ul class="navbar-nav ms-auto" id="navList">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="writing.html">Writing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek" target="_blank">GitHub</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/" target="_blank">LinkedIn</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek"
+                            target="_blank">GitHub</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/"
+                            target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
+
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
         </div>
     </nav>
@@ -149,7 +156,8 @@
                     <div class="project-info">
                         <h5>Space SHMUP (2022)</h5>
                         <p>Arcade Game</p>
-                        <a href="https://kristenmarcinek.github.io/content/games/space-shmup/index.html" class="btn btn-sm btn-primary">Explore</a>
+                        <a href="https://kristenmarcinek.github.io/content/games/space-shmup/index.html"
+                            class="btn btn-sm btn-primary">Explore</a>
                     </div>
                 </div>
             </div>
