--- a/teaching.html
+++ b/teaching.html
@@ -20,16 +20,22 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Kristen's Space.</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+            <button class="hamburger" id="hamburger">🍔</button>
+
+            <div class="navbar-menu" id="navbarMenu">
+                <ul class="navbar-nav ms-auto" id="navList">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="writing.html">Writing</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek" target="_blank">GitHub</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/" target="_blank">LinkedIn</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://github.com/kristenmarcinek"
+                            target="_blank">GitHub</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kristen-marcinek/"
+                            target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
+
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
         </div>
     </nav>
