--- a/writing.html
+++ b/writing.html
@@ -21,9 +21,12 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Kristen's Space.</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+
+            <button class="hamburger" id="hamburger">🍔</button>
+
+            <div class="navbar-menu" id="navbarMenu">
+                <ul class="navbar-nav ms-auto" id="navList">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Writing</a></li>
@@ -33,6 +36,7 @@
                             target="_blank">LinkedIn</a></li>
                 </ul>
             </div>
+
             <button id="themeToggle" class="btn btn-outline-light btn-sm">🌙</button>
         </div>
     </nav>
@@ -51,15 +55,16 @@
                 <p>October 2024<br>
                     By Bolu Adesanmi, Kristen Marcinek, and Elizabeth M H Newbury
                 </p>
-                <a
-                    href="https://www.wilsoncenter.org/article/innovating-how-we-innovate-triple-helix-university-industry-government-relations" target="_blank">Read
+                <a href="https://www.wilsoncenter.org/article/innovating-how-we-innovate-triple-helix-university-industry-government-relations"
+                    target="_blank">Read
                     more →</a>
             </article>
             <article class="writing-item">
                 <h3>The Plastic Pipeline Wins Big at Serious Game Festivals</h3>
                 <p>August 2024<br>
                     By Kristen Marcinek, Sonja R. O’Brien, Elizabeth M H Newbury, and John Matuszewski</p>
-                <a href="https://www.wilsoncenter.org/blog-post/plastic-pipeline-wins-big-serious-game-festivals" target="_blank">Read
+                <a href="https://www.wilsoncenter.org/blog-post/plastic-pipeline-wins-big-serious-game-festivals"
+                    target="_blank">Read
                     more →</a>
             </article>
 
@@ -67,14 +72,15 @@
                 <h3>Games Round Up: International Trade</h3>
                 <p>July 2024<br>
                     By Kristen Marcinek and Elizabeth M H Newbury</p>
-                <a href="https://www.wilsoncenter.org/blog-post/games-round-international-trade" target="_blank">Read more →</a>
+                <a href="https://www.wilsoncenter.org/blog-post/games-round-international-trade" target="_blank">Read
+                    more →</a>
             </article>
             <article class="writing-item">
                 <h3>Empowering Participation in Science: A Citizen Science Landscape</h3>
                 <p>June 2024<br>
                     By Kristen Marcinek and Joyce Chen</p>
-                <a
-                    href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape" target="_blank">Read
+                <a href="https://www.wilsoncenter.org/publication/empowering-participation-science-citizen-science-landscape"
+                    target="_blank">Read
                     more →</a>
             </article>
         </div>
