add thesis paper

--- a/writing.html
+++ b/writing.html
@@ -46,6 +46,10 @@
 
         <div class="writing-list mt-4">
             <article class="writing-item">
+                <h3>Fleshwalk: Horror, Spatiality, and Expression of Self in Video Game Design</h3>
+                <p>Upcoming</p>
+            </article>
+            <article class="writing-item">
                 <h3>Game Design as Expression of Self: A Typology</h3>
                 <p>December 2024</p>
                 <a href="https://bsky.app/profile/lichenlabs.bsky.social/post/3lcsjuyfnh224">Read more →</a>
